<?xml version="1.0"?>
<package>
  <name>sentor</name>
  <version>0.1.1</version>
  <description>The sentor package, to check that sensor messages get published</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>

  <license>MIT</license>

  <url type="website"></url>

  <author email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
    <!--<metapackage/> -->
  </export>
</package>
