<?xml version="1.0"?>
<package>
  <name>sentor</name>
  <version>2.1.0</version>
  <description>The sentor package, to check that sensor messages get published</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <url type="website"></url>

  <author email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rosservice</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!--<metapackage/> -->
  </export>
</package>
